<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".analyzeSpeechFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/record_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/analyze_txt"
            android:elevation="50dp"
            android:gravity="top|start"
            android:hint="@string/speak"
            android:inputType="textMultiLine"
            android:lines="10"
            android:maxLines="10"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            app:boxBackgroundMode="outline" />

        <Button
            android:id="@+id/grammar_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/record_text"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button"
            android:text="Check Grammar"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/grammar_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/grammar_check"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/description"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/grammar_suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/grammar_description"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/suggestion"
            android:textColor="@color/royalBlue" />

        <ImageButton
            android:id="@+id/recorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button2"
            android:elevation="10dp"
            android:src="@drawable/ic_mic" />

    </RelativeLayout>

    <!-- TODO: Update blank fragment layout -->


</FrameLayout>