<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".changePassword">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_oldPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="50dp"
            android:hint="old password"
            android:textColorHint="@color/royalBlue"
            app:boxStrokeColor="@color/royalBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconTint="@color/royalBlue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/oldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/royalBlue"
                tools:layout_editor_absoluteY="11dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="50dp"
            android:hint="@string/lbl_password"
            android:textColorHint="@color/royalBlue"
            app:boxStrokeColor="@color/royalBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_oldPassword"
            app:startIconTint="@color/royalBlue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/royalBlue"
                tools:layout_editor_absoluteY="11dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_cpassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:layout_marginTop="120dp"
            android:hint="@string/lbl_cpassword"
            android:textColorHint="@color/royalBlue"
            app:boxStrokeColor="@color/royalBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_password"
            app:startIconTint="@color/royalBlue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/royalBlue"
                tools:layout_editor_absoluteY="11dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/ch_btn_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:background="@drawable/button"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_cpassword"
            app:layout_constraintVertical_bias="0.085" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>