<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".dashboardFragment">

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_dashboard"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:columnCount="2"
        android:rowCount="3">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_analyze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:backgroundTint="@color/white"
            android:elevation="50dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_layout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/tips_improve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/micc" />

                <TextView
                    android:id="@+id/txt_tips_improve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/speech"
                    android:textColor="@color/royalBlue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:backgroundTint="@color/white"
            android:elevation="50dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_layout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/view_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/news" />

                <TextView
                    android:id="@+id/txt_analyze_speech2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/stories"
                    android:textColor="@color/royalBlue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:backgroundTint="@color/white"
            android:elevation="50dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_layout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/view_reports"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/report" />

                <TextView
                    android:id="@+id/txt_analyze_speech3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/v_reports"
                    android:textColor="@color/royalBlue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:backgroundTint="@color/white"
            android:elevation="50dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_layout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/top_stories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bulb" />

                <TextView
                    android:id="@+id/txt_improve_speech"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/tips"
                    android:textColor="@color/royalBlue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>


    </GridLayout>

</FrameLayout>